testsuite/tests/grammar/invalid_error_node/test_abstract/test.lkt
from common import FooNode, Example

@abstract class BaseErrorDecl : FooNode implements ErrorNode {
}

class ErrorDecl : BaseErrorDecl {
}
